RESOLVED FIXED311003
Fix ContinuousContent::Run copy constructor losing shapingBoundary field
https://bugs.webkit.org/show_bug.cgi?id=311003
Summary Fix ContinuousContent::Run copy constructor losing shapingBoundary field
Nikolas Zimmermann
Reported 2026-03-28 16:03:48 PDT
Noticed during a valgrind session.
Attachments
Nikolas Zimmermann
Comment 1 2026-03-28 16:08:05 PDT
EWS
Comment 2 2026-03-29 01:26:57 PDT
Committed 310177@main (64712f239b07): <https://commits.webkit.org/310177@main> Reviewed commits have been landed. Closing PR #61596 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-29 01:27:13 PDT
Note You need to log in before you can comment on or make changes to this bug.