Fix ContinuousContent::Run copy constructor losing shapingBoundary field https://bugs.webkit.org/show_bug.cgi?id=311003

Reviewed by Alan Baradlay.

The copy constructor was missing shapingBoundary in its initializer list,
causing it to silently reset to nullopt when Vector<Run, 3> grows and
copies runs. While I was at it, also mark the declared-but-never-defined
operator= as deleted since assignment is not needed for this type.

Covered by existing tests.

* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::Run::Run):

Canonical link: https://commits.webkit.org/310177@main